--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dipa":"nodemon --ignore ./upload"
   },
   "author": "Difa Hafidzuddin",
   "license": "ISC",
