--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node index.js",
     "dipa":"nodemon --ignore ./upload"
   },
+  "engines": {
+    "node": "16.x"
+  },
   "author": "Difa Hafidzuddin",
   "license": "ISC",
   "dependencies": {
